# python

./: README.md  ali.py  iban_generator_cli.py  install_dependencies.sh  random_iban_generator.py  randompassword.py
ros2_pytorch_demo/: package.xml  setup.py
ros2_pytorch_demo/launch/: demo_launch.py
ros2_pytorch_demo/ros2_pytorch_demo/: ai_processor.py  neural_model.py  robot_controller.py  sensor_publisher.py
