<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeselector="xml"?>
<package format="3">
  <name>ros2_pytorch_demo</name>
  <version>0.0.1</version>
  <description>A simple demo package combining ROS2 with PyTorch for AI-powered robotics</description>
  <maintainer email="demo@example.com">Demo User</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>